RESOLVED FIXED292016
REGRESSION(294049@main): [macOS Debug] ASSERTION FAILED: repaintContainer->isComposited() (flaky in EWS)
https://bugs.webkit.org/show_bug.cgi?id=292016
Summary REGRESSION(294049@main): [macOS Debug] ASSERTION FAILED: repaintContainer->is...
Marta Darbinyan
Reported 2025-04-24 10:29:45 PDT
The following tests are failing in EWS with assertion error. The flakiness started on 294049@main. imported/w3c/web-platform-tests/scroll-animations/css/scroll-timeline-frame-size-changed.html imported/w3c/web-platform-tests/scroll-animations/css/scroll-timeline-default-quirks-mode.html imported/w3c/web-platform-tests/scroll-animations/css/scroll-timeline-default.html imported/w3c/web-platform-tests/scroll-animations/css/scroll-timeline-inline-orientation.html Errors: ASSERTION FAILED: repaintContainer->isComposited() /Volumes/Data/worker/macOS-Sequoia-Debug-Build-EWS/build/Source/WebCore/rendering/RenderObject.cpp(1050) : void WebCore::RenderObject::repaintUsingContainer(SingleThreadWeakPtr<const RenderLayerModelObject> &&, const LayoutRect &, bool) const 1 0x306dd0d84 WebCore::RenderObject::repaintUsingContainer(WTF::WeakPtr<WebCore::RenderLayerModelObject const, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>&&, WebCore::LayoutRect const&, bool) const 2 0x306d26720 WebCore::RenderLayer::repaintIncludingNonCompositingDescendants(WebCore::RenderLayerModelObject const*) 3 0x306d491a0 WebCore::RenderLayerCompositor::repaintOnCompositingChange(WebCore::RenderLayer&, WebCore::RenderLayerModelObject*) 4 0x306d57860 WebCore::RenderLayerCompositor::updateExplicitBacking(WebCore::RenderLayer&, WebCore::RenderLayerCompositor::RequiresCompositingData&, WebCore::RenderLayerCompositor::BackingRequired) 5 0x306d28944 WebCore::RenderLayerCompositor::layerStyleChanged(WebCore::StyleDifference, WebCore::RenderLayer&, WebCore::RenderStyle const*) 6 0x306d279cc WebCore::RenderLayer::styleChanged(WebCore::StyleDifference, WebCore::RenderStyle const*) 7 0x306d663f4 WebCore::RenderLayerModelObject::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) 8 0x306bc5798 WebCore::RenderBox::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) 9 0x306bc5610 WebCore::RenderBlock::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) 10 0x306bf278c WebCore::RenderBlockFlow::styleDidChange(WebCore::StyleDifference, WebCore::RenderStyle const*) 11 0x306c72f3c WebCore::RenderElement::setStyle(WebCore::RenderStyle&&, WebCore::StyleDifference) 12 0x3070a90b4 WebCore::RenderTreeUpdater::updateRendererStyle(WebCore::RenderElement&, WebCore::RenderStyle&&, WebCore::StyleDifference) 13 0x3070a749c WebCore::RenderTreeUpdater::updateElementRenderer(WebCore::Element&, WebCore::Style::ElementUpdate const&) 14 0x3070a6344 WebCore::RenderTreeUpdater::updateRenderTree(WebCore::ContainerNode&) 15 0x3070a5b90 WebCore::RenderTreeUpdater::commit(std::__1::unique_ptr<WebCore::Style::Update, std::__1::default_delete<WebCore::Style::Update>>) 16 0x304c030ac WebCore::Document::updateRenderTree(std::__1::unique_ptr<WebCore::Style::Update, std::__1::default_delete<WebCore::Style::Update>>) 17 0x304c037bc WebCore::Document::resolveStyle(WebCore::Document::ResolveStyleType) 18 0x304c043dc WebCore::Document::updateStyleIfNeeded() 19 0x304c05b40 WebCore::Document::updateLayoutIfDimensionsOutOfDate(WebCore::Element&, WTF::OptionSet<WebCore::DimensionsCheck>, WTF::OptionSet<WebCore::LayoutOptions>) 20 0x304d4df84 WebCore::Element::scrollHeight() 21 0x30133aba0 WebCore::jsElement_scrollHeightGetter(JSC::JSGlobalObject&, WebCore::JSElement&) 22 0x301216b60 long long WebCore::IDLAttribute<WebCore::JSElement>::get<&WebCore::jsElement_scrollHeightGetter(JSC::JSGlobalObject&, WebCore::JSElement&), (WebCore::CastedThisErrorBehavior)3>(JSC::JSGlobalObject&, long long, JSC::PropertyName) 23 0x301216a24 WebCore::jsElement_scrollHeight(JSC::JSGlobalObject*, long long, JSC::PropertyName) 24 0x130cbfbb8 WTF::FunctionPtr<(WTF::PtrTag)57072, long long (JSC::JSGlobalObject*, long long, JSC::PropertyName), (WTF::FunctionAttributes)1>::operator()(JSC::JSGlobalObject*, long long, JSC::PropertyName) const 25 0x130fef3c4 JSC::PropertySlot::customGetter(JSC::VM&, JSC::PropertyName) const 26 0x13025d994 JSC::PropertySlot::getValue(JSC::JSGlobalObject*, JSC::PropertyName) const 27 0x130c823ac JSC::JSValue::get(JSC::JSGlobalObject*, JSC::PropertyName, JSC::PropertySlot&) const 28 0x130991bc8 JSC::LLInt::performLLIntGetByID(JSC::BytecodeIndex, JSC::CodeBlock*, JSC::JSGlobalObject*, JSC::JSValue, JSC::Identifier const&, JSC::GetByIdModeMetadata&) 29 0x1309919b4 llint_slow_path_get_by_id 30 0x131900038 jsc_llint_llintOpWithMetadata__llintOpWithReturn__llintOp__commonOp__fn__fn__makeReturn__fn__fn__fn__opGetByIdSlow_LowLevelInterpreter_asm_508 31 0x321419a30 30 ??? 0x0000000321419a30 0x0 + 13442849328 com.apple.WebKit.WebContent.Development terminated (pid 21028) for reason: crash LEAK: 1 WebPageProxy Test result: https://ews-build.s3-us-west-2.amazonaws.com/macOS-Sequoia-Debug-WK2-Tests-EWS/c899a189-20445/results.html History: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fscroll-animations%2Fcss%2Fscroll-timeline-default-quirks-mode.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fscroll-animations%2Fcss%2Fscroll-timeline-default.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fscroll-animations%2Fcss%2Fscroll-timeline-frame-size-changed.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fscroll-animations%2Fcss%2Fscroll-timeline-inline-orientation.html
Attachments
Radar WebKit Bug Importer
Comment 1 2025-04-24 10:30:21 PDT
EWS
Comment 2 2025-04-24 13:12:35 PDT
Test gardening commit 294077@main (7c52360fbeba): <https://commits.webkit.org/294077@main> Reviewed commits have been landed. Closing PR #44479 and removing active labels.
Matt Woodrow
Comment 3 2025-04-27 20:09:29 PDT
*** Bug 291974 has been marked as a duplicate of this bug. ***
Matt Woodrow
Comment 4 2025-04-27 20:12:18 PDT
EWS
Comment 5 2025-04-29 11:55:58 PDT
Committed 294290@main (62a02c8c5d58): <https://commits.webkit.org/294290@main> Reviewed commits have been landed. Closing PR #44580 and removing active labels.
Anil Hebbar
Comment 6 2025-05-02 12:27:42 PDT
*** Bug 292353 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.