REGRESSION(294049@main): scroll-animations/css/animation-range-visual-test.html` hits `ASSERT(repaintContainer->isComposited())` under `RenderObject::repaintUsingContainer(). https://bugs.webkit.org/show_bug.cgi?id=292016 <rdar://149959000>

Reviewed by Simon Fraser.

When removing a RenderLayer entirely, update the cached repaint container on all
children at the same time they get marked as needing a full repaint.

Fix the existing test to actually catch this bug by waiting for a rendering
update so that the container is composited before removing its layer.

* LayoutTests/compositing/repaint-container-assertion-when-removing-layer.html:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::removeOnlyThisLayer):

Canonical link: https://commits.webkit.org/294290@main